--- a/cssp/Quem somos.css
+++ b/cssp/Quem somos.css
@@ -138,7 +138,208 @@ video{
 
 
 
+/*mediascreen*/
+  @media (max-width:1249px) {
+    .im{
+       width:500px;
+       height: 500px;
+    }
+    .cor{
+        margin-left: 2rem;
+    }
+    
+  }
 
+
+
+  @media (max-width:1120px) {
+    .mg{
+       width:500px;
+       height: 600px;
+    }
+    
+  }
+
+
+  @media (max-width:1038px) {
+    .mg{
+       width:400px;
+       height: 500px;
+    }
+    .cor{
+        margin-left: 2rem;
+    }
+    video{
+        margin-left: 4rem;
+        width: 700px;
+        height: 500px;
+    }
+    
+  }
+
+
+
+
+  @media (max-width:988px) {
+    .mg{
+       width:500px;
+       height: 500px;
+       margin-left: 3rem;
+    }
+   
+    .cps1 video{
+        width: 400px;
+        height: 400px;
+        margin-left: 17rem;
+    }
+    
+  }
+
+  @media (max-width:760px) {
+    .mg{
+       width:500px;
+       height: 500px;
+       margin-left: 3rem;
+    }
+   
+    .cps1 video{
+        width: 400px;
+        height: 400px;
+        margin-left: 9rem;
+    }
+    
+  }
+
+  @media(max-width:604){
+    .mg{
+        width:500px;
+        height: 500px;
+        margin-left: 3rem;
+     }
+    .cor{
+        margin-left:10rem;
+    }
+
+     
+  }
+ 
+  @media (max-width:1190px) {
+    .cor{
+        margin-left: 3rem;
+    }
+
+    video{
+        margin-right: 4rem;
+        width: 700px;
+        height: 700px;
+    }
+     .p3{
+        margin-left: 1px;
+     }
+    }
+
+
+
+        @media (max-width:400px) {
+            body{
+                width: 400px;
+            }
+            .mg{
+                width: 400px;
+                height: 400px;
+                margin-left: 1rem;
+            }
+           .cps1 video{
+               width: 300px;
+               height: 200px;
+               margin-left: 1rem;
+            }
+
+            #h2{
+                margin-right: 1rem;
+            }
+
+            #xii p{
+                margin-right: 3rem;
+            }
+
+            #xi p{
+                margin-left: 3rem;
+            }
+            .p2{
+                margin-left: 0.5rem;
+            }
+            .p3{
+                margin-left: 0.2rem;
+            }
+
+            .Q p{
+                margin-right: 1rem;
+            }
+           }
+
+           @media (max-width:383px) {
+              body{
+                width: 387px;
+              }
+
+              .cps1 video{
+                width: 250px;
+                height: 200px;
+                margin-left: 1rem;
+             }
+             .tv{
+                margin-right: 2rem;
+             }
+            }
+
+            @media (max-width:415px) {
+                body{
+                    width: 415px;
+                }
+                .mg{
+                    width: 400px;
+                    height: 400px;
+                    margin-left: 1rem;
+                }
+               .cps1 video{
+                   width: 300px;
+                   height: 200px;
+                   margin-left: 1rem;
+                }
+    
+                #h2{
+                    margin-right: 1rem;
+                }
+    
+                #xii p{
+                    margin-right: 3rem;
+                }
+    
+                #xi p{
+                    margin-left: 3rem;
+                }
+                .p2{
+                    margin-left: 0.5rem;
+                }
+                .p3{
+                    margin-left: 0.2rem;
+                }
+    
+                .Q p{
+                    margin-right: 1rem;
+                }
+               }
+    
+
+
+
+           
+
+
+
+            
+ 
 
 
 
