--- a/cssp/loja.css
+++ b/cssp/loja.css
@@ -93,11 +93,13 @@
 .im{
     margin-right: 1rem;
     margin-left: 1.8rem;
+    margin-bottom: 1rem;
 }
 
 .im2{
     margin-right: 1rem;
     margin-left: 1.8rem;
+    margin-bottom: 1rem;
 }
 
 .ht{
@@ -114,7 +116,7 @@ button{
     margin-bottom: 2rem;
 }
 
-.txt{
+/*.txt{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -129,17 +131,8 @@ button{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
+}*/
 
 
 
 /*mediascreen*/
-@media (max-width:568px) {
-    
-    
-  }
- 
-  @media (max-width:326px) {
-     
-     
-  }
